bar chart race updated with data!!!

--- a/bar_char_ob/index.html
+++ b/bar_char_ob/index.html
@@ -1,3 +1,5 @@
+<!-- THIS NEEDS TO FIX REPLAY BUTTON -->
+
 <html lang="en">
 
 <head>
@@ -7,7 +9,7 @@
     <title>Bar Chart Race, Explained</title>
     <link rel="stylesheet" type="text/css" href="./inspector.css">
 </head>
-
+ 
 <body>
     <!-- <script src="https://d3js.org/d3.v3.js"></script> -->
     <!-- <script src='index.js'></script> -->
